tests/baselines/reference/commentsOnJSXExpressionsArePreserved(jsx=react,module=commonjs,moduledetection=legacy).errors.txt
commentsOnJSXExpressionsArePreserved.tsx(5,17): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.


==== commentsOnJSXExpressionsArePreserved.tsx (1 errors) ====
    // file is intentionally not a module - this tests for a crash in the module/system transforms alongside the `react-jsx` and `react-jsxdev` outputs
    namespace JSX {}
    class Component {
        render() {
            return <div>
                    ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
                {/* missing */}
                {null/* preserved */}
                {
                    // ??? 1
                }
                { // ??? 2
                }
                {// ??? 3
                }
                {
                    // ??? 4
                /* ??? 5 */}
            </div>;
        }
    }